@@ -1,7 +1,5 @@
 Inportant Information:
-- For the people that are using the nvidia shield, There has been a few bugs for some people that are using Kodi 20.
-
-Note: 
-- If you are experiencing bugs such as Scrapping, Play Next, Pls report on Github on Issue #69
+- If you guys have been experiencing issues with Next Up, That was on me. 
+- If you guys are still experiencing issues, pls report on issue #69
 
 github.com/Goldenfreddy0703/Otaku/issues/69
