@@ -1,3 +1,6 @@
+Changelog 0.3.20 [20230208]:
+- Made dumb mistake with Next Up
+
 Changelog 0.3.19 [20230208]:
 - Subtitles turn on automatically for subs and off for dubs
 
